Finish basic game logic

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -21,7 +21,8 @@
             android:layout_marginLeft="12dp"
             android:layout_marginStart="12dp"
             android:layout_centerVertical="true"
-            android:text="@string/play_game" />
+            android:text="@string/play_game"
+            android:onClick="startGame"/>
 
         <LinearLayout
             android:id="@+id/status_display"
